# talos_desk

./: .gitignore  CMakeLists.txt  PRD.md  README.md  accessibility_guide.md  architecture_design.md  component_library.html  development_plan.md  frontend_design_system.md  todo.md  use_case.md  ux_architecture.md  workflow.md
cmake/: FindFFmpeg.cmake  FindLive555.cmake
docs/: README.md
docs/architecture/: BUILD_SUMMARY.md  architecture_design.md
docs/design/: accessibility_guide.md  frontend_design_system.md  ux_architecture.md
docs/meta/: DOCS_VERSION.md
docs/operations/: use_case.md  workflow.md
docs/project/: CHANGELOG.md  PRD.md  development_plan.md  todo.md
include/capture/: capture_engine.h  desktop_duplication_api.h  macos_capture_engine.h  windows_capture_engine.h
include/encoder/: encoder_types.h  ffmpeg_encoder.h  video_encoder.h
include/network/: rtsp_server.h
include/ui/: configuration_window.h  tray_application.h
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  setup_dependencies.sh
src/: main.cpp
src/capture/: capture_engine.cpp  desktop_duplication_api.cpp  frame_buffer.cpp  macos_capture_engine.mm  windows_capture_engine.cpp
src/encoder/: codec_manager.cpp  ffmpeg_encoder.cpp  video_encoder.cpp
src/network/: rtsp_server.cpp  rtsp_session.cpp
src/ui/: configuration_window.cpp  tray_application.cpp
